[tool.poetry]
name = "igppack"
version = "0.10.0"
description = ""
authors = ["Alby1 <30355916+Alby1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

    [tool.poetry.dependencies.royalnet]
        version = "^5.1.2"
        # Require these until https://github.com/Steffo99/royalnet/issues/105 is done
        extras = [
            "telegram",
            "discord",
            "alchemy_easy",
            "bard",
            "constellation",
            "sentry",
            "herald",
            "coloredlogs"
        ]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
